5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1590_2894.log
== SUBMITION (2019-03-20 15:47:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = floatt(input(" 90,90 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.123203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 5, in <module>
    var = floatt(input())
NameError: name 'floatt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:47:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = floatt(input(" 90,90 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = floatt(input())
NameError: name 'floatt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:48:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" 90,90 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:48:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" 90,99 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:05:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" 90,99 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:05:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("90,99"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.147773
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:05:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("90,99"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.213072
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:06:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("90,99"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:06:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("90,99"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.132701
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
54.84
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
2893.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:06:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("90,99"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.125161
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
